# cerberus-sast

./: .cerberus.yml  .cerberus.yml.example  .dockerignore  .gitignore  .gitlab-ci.example.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  Makefile.docker  Project_structure.md  README.md  SPECIFICATIONS.md  cerberus-results.json  docker-compose.joern.yml  docker-compose.yml  hybrid-results.json  hybrid-validation-results.json  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  test_phase1.py  test_phase2.py
.claude/: settings.local.json
.github/workflows/: cerberus-scan.yml  ci.yml  docker.yml  release.yml
cerberus/: __init__.py  __main__.py
cerberus/analysis/: rule_engine.py
cerberus/api/: __init__.py  app.py  models.py
cerberus/ast/: __init__.py  cerberus_node.py
cerberus/baseline/: __init__.py  manager.py
cerberus/cli/: __init__.py  commands.py
cerberus/context/: __init__.py  dependency_graph.py  pagerank.py  repo_mapper.py  symbol_extractor.py  taint_extractor.py  tree_sitter_parser.py  vector_store.py
cerberus/core/: __init__.py  baseline.py  cache.py  config.py  engine.py  orchestrator.py  progress.py  scanner.py
cerberus/detection/: __init__.py  engine.py  flow_analyzer.py  joern_client.py  js_queries.py  query_generator.py  slicer.py
cerberus/examples/: vulnerable.c
cerberus/inference/: __init__.py  candidate_extractor.py  classifier.py  engine.py  propagator.py  spec_merger.py  spec_writer.py
cerberus/llm/: __init__.py  gateway.py
cerberus/llm/prompts/: __init__.py  classification.py  taint_classification.py  verification.py
cerberus/llm/providers/: __init__.py  anthropic.py  base.py  models.py  ollama.py  openai.py
cerberus/ml/: __init__.py  codebert_classifier.py  tier1_filter.py  training_data.py
cerberus/models/: __init__.py  base.py  finding.py  repo_map.py  spec.py  taint_flow.py
cerberus/plugins/: base.py  manager.py
cerberus/reporting/: __init__.py  base.py  console.py  formats.py  html.py  json_reporter.py  markdown.py  sarif.py
cerberus/rules/: __init__.py  loader.py
cerberus/rules/defaults/: javascript_sinks.yaml  javascript_sources.yaml  python_sinks.yaml  python_sources.yaml  sanitizers.yaml
cerberus/utils/: __init__.py  async_utils.py  logging.py
cerberus/verification/: __init__.py  attacker_agent.py  council.py  defender_agent.py  engine.py  feedback.py  judge_agent.py
data/: training_data.jsonl
docker/: .cerberus.yml  example.c  run-example.sh
docker/rules/c/: demo-rules.yml
examples/: .cerberus.yml  cerberus.example.yml
plugins/cerberus-c-plugin/: README.md  plugin.py  pyproject.toml
plugins/cerberus-c-plugin/cerberus_c_plugin/: __init__.py
plugins/cerberus-c-plugin/rules/: c-buffer-overflow.yml
reports/: JS_VALIDATION_REPORT.md  TEST_REPORT.md  V1_VALIDATION_REPORT.md  cerberus-results.html  cerberus-results.json  cerberus-results.md
reports/v1_validation/: V1_VALIDATION_REPORT.md  findings.json  findings_debug.json
scripts/: finetune_codebert.py
tests/: __init__.py  conftest.py
tests/fixtures/vulnerable_app/: EXPECTED_FINDINGS.md  __init__.py  app.py  database.py  utils.py
tests/fixtures/vulnerable_express_app/: EXPECTED_FINDINGS.md  package.json
tests/fixtures/vulnerable_express_app/backend/: app.js
tests/fixtures/vulnerable_express_app/backend/middleware/: auth.js
tests/fixtures/vulnerable_express_app/backend/models/: User.js
tests/fixtures/vulnerable_express_app/backend/routes/: admin.js  products.js  users.js
tests/fixtures/vulnerable_express_app/backend/utils/: file.js  shell.js
tests/fixtures/vulnerable_express_app/frontend/: angular.json
tests/fixtures/vulnerable_express_app/frontend/src/app/admin/: admin.component.ts
tests/fixtures/vulnerable_express_app/frontend/src/app/search/: search.component.ts
tests/fixtures/vulnerable_express_app/frontend/src/app/user/: user.component.ts
tests/fixtures/vulnerable_express_app/frontend/src/services/: api.service.ts
tests/test_api/: test_app.py  test_models.py
tests/test_baseline/: __init__.py  test_manager.py
tests/test_cli/: __init__.py  test_commands.py
tests/test_context/: __init__.py  test_dependency_graph.py  test_js_symbol_extraction.py  test_pagerank.py  test_repo_mapper.py  test_symbol_extractor.py  test_taint_extractor.py  test_tree_sitter_parser.py  test_vector_store.py
tests/test_core/: __init__.py  test_config.py  test_orchestrator.py  test_progress.py
tests/test_detection/: __init__.py  test_engine.py  test_flow_analyzer.py  test_hybrid.py  test_integration.py  test_joern_client.py  test_query_generator.py  test_slicer.py
tests/test_e2e/: test_js_scan.py
tests/test_fixtures/: __init__.py  test_js_fixtures_valid.py
tests/test_inference/: __init__.py  test_candidate_extractor.py  test_classifier.py  test_engine.py  test_integration.py  test_js_heuristics.py  test_propagator.py  test_spec_merger.py  test_spec_writer.py
tests/test_llm/: test_anthropic.py  test_base.py  test_gateway.py  test_models.py  test_ollama.py  test_openai.py  test_prompts.py
tests/test_ml/: test_benchmark.py  test_codebert_classifier.py  test_tier1_filter.py  test_training_data.py
tests/test_reporting/: test_reporters.py
tests/test_verification/: __init__.py  test_attacker_agent.py  test_council.py  test_defender_agent.py  test_engine.py  test_feedback.py  test_judge_agent.py  test_prompts.py
