[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus-sast"
version = "1.0.0"
description = "AI-Driven Static Application Security Testing with Neuro-Symbolic Pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Cerberus Team"}
]
keywords = [
    "sast",
    "security",
    "static-analysis",
    "vulnerability",
    "ai",
    "llm",
    "code-property-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # Async
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    # LLM Providers
    "ollama>=0.1.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    # Parsing
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.10.0",
    # Graph
    "networkx>=3.2.0",
    "scipy>=1.11.0",
    # Vector Store
    "chromadb>=0.4.0",
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    # Docker
    "docker>=7.0.0",
    # Utilities
    "tenacity>=8.2.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-aiofiles>=23.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
cerberus = "cerberus.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/cerberus-sast/cerberus"
Documentation = "https://cerberus-sast.github.io/cerberus"
Repository = "https://github.com/cerberus-sast/cerberus"
Issues = "https://github.com/cerberus-sast/cerberus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerberus*"]

[tool.setuptools.package-data]
cerberus = ["reporting/templates/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::FutureWarning:tree_sitter",
    "ignore::DeprecationWarning:tree_sitter",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "chromadb.*",
    "ollama.*",
    "docker.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["cerberus"]
branch = true
omit = [
    "cerberus/__main__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
