[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus-c-plugin"
version = "1.0.0"
description = "Plugin C pour Cerberus-SAST"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cerberus Team", email = "cerberus@example.com"}
]

dependencies = [
    "cerberus-sast>=1.0.0",
    "tree-sitter>=0.20",
    "tree-sitter-c>=0.20",
]

[project.entry-points."cerberus.plugins"]
c = "cerberus_c_plugin.plugin:CPlugin"

[tool.setuptools.packages.find]
include = ["cerberus_c_plugin*"]

[tool.setuptools.package-data]
cerberus_c_plugin = ["rules/*.yml"]